--- a/src/ThomasTowers.RequirementTracker.Manager/App.xaml
+++ b/src/ThomasTowers.RequirementTracker.Manager/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ThomasTowers.RequirementTracker.Manager.App"
+﻿<Application x:Class="ThomasTowers.RetirementTracker.Manager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ThomasTowers.RequirementTracker.Manager"
+             xmlns:local="clr-namespace:ThomasTowers.RetirementTracker.Manager"
              Startup="Application_Startup" Exit="Application_Exit">
     <Application.Resources>
         <ResourceDictionary>
