--- a/src/ThomasTowers.RequirementTracker.Manager/MainWindow.xaml
+++ b/src/ThomasTowers.RequirementTracker.Manager/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="ThomasTowers.RequirementTracker.Manager.MainWindow"
+﻿<Window x:Class="ThomasTowers.RetirementTracker.Manager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ThomasTowers.RequirementTracker.Manager"
+        xmlns:controls="clr-namespace:ThomasTowers.RetirementTracker.Manager.Controls"
         mc:Ignorable="d"
-        Title="Retirement Manager" Height="450" Width="800" DataContext="{Binding Source={StaticResource Locator}, Path=MainViewModel}">
-    <Grid>
-
-    </Grid>
+        Title="Retirement Manager" 
+        DataContext="{Binding Source={StaticResource Locator}, Path=MainViewModel}" 
+        d:DesignHeight="434.45" d:DesignWidth="647.431" ResizeMode="CanResizeWithGrip">
+    <DockPanel>
+        <controls:MainMenu DockPanel.Dock="Top" />
+        <controls:MainStatusBar DockPanel.Dock="Bottom" />
+        <TextBox AcceptsReturn="True" Name="txtEditor" />
+    </DockPanel>
 </Window>
